--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Nunito', sans-serif;
   @apply bg-white;
 }
 
