--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ a {
 but this would do for now until we get time to improve it */
 /* Sanity post css starts */
 .post-content p:empty {
-  @apply py-4;
+  @apply py-4 mb-0;
 }
 
 .post-content {
@@ -52,7 +52,7 @@ but this would do for now until we get time to improve it */
 }
 
 .post-content p {
-  @apply text-lg md:text-xl text-justify;
+  @apply text-lg md:text-xl text-justify mb-6;
 }
 
 .post-content h1,
