--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,70 @@ a {
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
 }
+
+@layer utilities {
+  @variants responsive {
+    .text-shadow {
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .text-shadow-md {
+      text-shadow: 0 4px 8px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.08);
+    }
+
+    .text-shadow-lg {
+      text-shadow: 0 15px 30px rgba(0, 0, 0, 0.11),
+        0 5px 15px rgba(0, 0, 0, 0.08);
+    }
+
+    .text-shadow-none {
+      text-shadow: none;
+    }
+  }
+}
+
+/* Adding styles for sanity content, ideally we should use serializers, 
+but this would do for now until we get time to improve it */
+/* Sanity post css starts */
+.post-content p:empty {
+  @apply py-4 mb-0;
+}
+
+.post-content {
+  @apply text-white;
+}
+
+.post-content p {
+  @apply text-lg md:text-xl text-justify mb-6;
+}
+
+.post-content h1,
+h2,
+h3,
+h4,
+h5 {
+  @apply font-bold;
+}
+
+.post-content h1 {
+  @apply text-4xl;
+}
+.post-content h2 {
+  @apply text-3xl;
+}
+.post-content h3 {
+  @apply text-2xl;
+}
+
+.post-content h3 {
+  @apply text-xl;
+}
+
+.post-content blockquote {
+  @apply border-l-8 border-secondary p-8 text-secondary bg-gray-50 font-bold;
+}
+
+.post-content ul {
+  @apply my-6 list-disc ml-5;
+}
+/* Sanity post css ends */
